Fix of add/delete/edit comments. Updates to UnactivatedException

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -1,168 +1,3 @@
-.flag {
-	width: 18px;
-	height: 12px;
-	background:url('/images/flags.png') no-repeat
-}
-
-.flag.flag-af {background-position: -18px 0}
-.flag.flag-al {background-position: -36px 0}
-.flag.flag-am {background-position: -54px 0}
-.flag.flag-an {background-position: -72px 0}
-.flag.flag-ao {background-position: -90px 0}
-.flag.flag-ar {background-position: -108px 0}
-.flag.flag-at {background-position: -126px 0}
-.flag.flag-au {background-position: -144px 0}
-.flag.flag-aw {background-position: -162px 0}
-.flag.flag-az {background-position: -180px 0}
-.flag.flag-ba {background-position: -198px 0}
-.flag.flag-bb {background-position: -216px 0}
-.flag.flag-bd {background-position: 0 -12px}
-.flag.flag-be {background-position: -18px -12px}
-.flag.flag-bf {background-position: -36px -12px}
-.flag.flag-bg {background-position: -54px -12px}
-.flag.flag-bh {background-position: -72px -12px}
-.flag.flag-bi {background-position: -90px -12px}
-.flag.flag-bj {background-position: -108px -12px}
-.flag.flag-bm {background-position: -126px -12px}
-.flag.flag-bn {background-position: -144px -12px}
-.flag.flag-bo {background-position: -162px -12px}
-.flag.flag-br {background-position: -180px -12px}
-.flag.flag-bs {background-position: -198px -12px}
-.flag.flag-bt {background-position: -216px -12px}
-.flag.flag-bw {background-position: 0 -24px}
-.flag.flag-by {background-position: -18px -24px}
-.flag.flag-bz {background-position: -36px -24px}
-.flag.flag-ca {background-position: -54px -24px}
-.flag.flag-cf {background-position: -72px -24px}
-.flag.flag-cg {background-position: -90px -24px}
-.flag.flag-ch {background-position: -108px -24px}
-.flag.flag-ci {background-position: -126px -24px}
-.flag.flag-ck {background-position: -144px -24px}
-.flag.flag-cm {background-position: -162px -24px}
-.flag.flag-cn {background-position: -180px -24px}
-.flag.flag-co {background-position: -198px -24px}
-.flag.flag-cr {background-position: -216px -24px}
-.flag.flag-cu {background-position: 0 -36px}
-.flag.flag-cv {background-position: -18px -36px}
-.flag.flag-cy {background-position: -36px -36px}
-.flag.flag-cz {background-position: -54px -36px}
-.flag.flag-de {background-position: -72px -36px}
-.flag.flag-dk {background-position: -90px -36px}
-.flag.flag-dz {background-position: -108px -36px}
-.flag.flag-ec {background-position: -126px -36px}
-.flag.flag-ee {background-position: -144px -36px}
-.flag.flag-eg {background-position: -162px -36px}
-.flag.flag-er {background-position: -180px -36px}
-.flag.flag-es {background-position: -198px -36px}
-.flag.flag-et {background-position: -216px -36px}
-.flag.flag-fi {background-position: 0 -48px}
-.flag.flag-fj {background-position: -18px -48px}
-.flag.flag-fo {background-position: -36px -48px}
-.flag.flag-fr {background-position: -54px -48px}
-.flag.flag-ga {background-position: -72px -48px}
-.flag.flag-gb {background-position: -90px -48px}
-.flag.flag-ge {background-position: -108px -48px}
-.flag.flag-gi {background-position: -126px -48px}
-.flag.flag-gl {background-position: -144px -48px}
-.flag.flag-gp {background-position: -162px -48px}
-.flag.flag-gr {background-position: -180px -48px}
-.flag.flag-gt {background-position: -198px -48px}
-.flag.flag-gu {background-position: -216px -48px}
-.flag.flag-gy {background-position: 0 -60px}
-.flag.flag-hk {background-position: -18px -60px}
-.flag.flag-hr {background-position: -36px -60px}
-.flag.flag-ht {background-position: -54px -60px}
-.flag.flag-hu {background-position: -72px -60px}
-.flag.flag-id {background-position: -90px -60px}
-.flag.flag-ie {background-position: -108px -60px}
-.flag.flag-il {background-position: -126px -60px}
-.flag.flag-in {background-position: -144px -60px}
-.flag.flag-iq {background-position: -162px -60px}
-.flag.flag-ir {background-position: -180px -60px}
-.flag.flag-is {background-position: -198px -60px}
-.flag.flag-it {background-position: -216px -60px}
-.flag.flag-jm {background-position: 0 -72px}
-.flag.flag-jo {background-position: -18px -72px}
-.flag.flag-jp {background-position: -36px -72px}
-.flag.flag-ke {background-position: -54px -72px}
-.flag.flag-kg {background-position: -72px -72px}
-.flag.flag-kh {background-position: -90px -72px}
-.flag.flag-ki {background-position: -108px -72px}
-.flag.flag-kp {background-position: -126px -72px}
-.flag.flag-kr {background-position: -144px -72px}
-.flag.flag-ky {background-position: -162px -72px}
-.flag.flag-kz {background-position: -180px -72px}
-.flag.flag-lb {background-position: -198px -72px}
-.flag.flag-lc {background-position: -216px -72px}
-.flag.flag-lk {background-position: 0 -84px}
-.flag.flag-lt {background-position: -18px -84px}
-.flag.flag-lu {background-position: -36px -84px}
-.flag.flag-lv {background-position: -54px -84px}
-.flag.flag-ly {background-position: -72px -84px}
-.flag.flag-mc {background-position: -90px -84px}
-.flag.flag-md {background-position: -108px -84px}
-.flag.flag-mg {background-position: -126px -84px}
-.flag.flag-mn {background-position: -144px -84px}
-.flag.flag-mo {background-position: -162px -84px}
-.flag.flag-mp {background-position: -180px -84px}
-.flag.flag-ms {background-position: -198px -84px}
-.flag.flag-mx {background-position: -216px -84px}
-.flag.flag-my {background-position: 0 -96px}
-.flag.flag-mz {background-position: -18px -96px}
-.flag.flag-na {background-position: -36px -96px}
-.flag.flag-nc {background-position: -54px -96px}
-.flag.flag-nf {background-position: -72px -96px}
-.flag.flag-nl {background-position: -90px -96px}
-.flag.flag-no {background-position: -108px -96px}
-.flag.flag-np {background-position: -126px -96px}
-.flag.flag-nr {background-position: -144px -96px}
-.flag.flag-nz {background-position: -162px -96px}
-.flag.flag-om {background-position: -180px -96px}
-.flag.flag-pa {background-position: -198px -96px}
-.flag.flag-pe {background-position: -216px -96px}
-.flag.flag-pf {background-position: 0 -108px}
-.flag.flag-ph {background-position: -18px -108px}
-.flag.flag-pk {background-position: -36px -108px}
-.flag.flag-pl {background-position: -54px -108px}
-.flag.flag-pm {background-position: -72px -108px}
-.flag.flag-pr {background-position: -90px -108px}
-.flag.flag-pt {background-position: -108px -108px}
-.flag.flag-py {background-position: -126px -108px}
-.flag.flag-qa {background-position: -144px -108px}
-.flag.flag-ro {background-position: -162px -108px}
-.flag.flag-ru {background-position: -180px -108px}
-.flag.flag-sa {background-position: -198px -108px}
-.flag.flag-sb {background-position: -216px -108px}
-.flag.flag-sd {background-position: 0 -120px}
-.flag.flag-se {background-position: -18px -120px}
-.flag.flag-sg {background-position: -36px -120px}
-.flag.flag-si {background-position: -54px -120px}
-.flag.flag-sk {background-position: -72px -120px}
-.flag.flag-sl {background-position: -90px -120px}
-.flag.flag-so {background-position: -108px -120px}
-.flag.flag-tc {background-position: -126px -120px}
-.flag.flag-tg {background-position: -144px -120px}
-.flag.flag-th {background-position: -162px -120px}
-.flag.flag-tn {background-position: -180px -120px}
-.flag.flag-to {background-position: -198px -120px}
-.flag.flag-tr {background-position: -216px -120px}
-.flag.flag-tt {background-position: 0 -132px}
-.flag.flag-tv {background-position: -18px -132px}
-.flag.flag-tw {background-position: -36px -132px}
-.flag.flag-tz {background-position: -54px -132px}
-.flag.flag-ua {background-position: -72px -132px}
-.flag.flag-ug {background-position: -90px -132px}
-.flag.flag-us {background-position: -108px -132px}
-.flag.flag-uy {background-position: -126px -132px}
-.flag.flag-va {background-position: -144px -132px}
-.flag.flag-ve {background-position: -162px -132px}
-.flag.flag-vg {background-position: -180px -132px}
-.flag.flag-vi {background-position: -198px -132px}
-.flag.flag-vn {background-position: -216px -132px}
-.flag.flag-ws {background-position: 0 -144px}
-.flag.flag-ye {background-position: -18px -144px}
-.flag.flag-za {background-position: -36px -144px}
-.flag.flag-zw {background-position: -54px -144px}
 
 /*
 YUI3 GRIDS
@@ -10615,3 +10450,11 @@ span.inreply {
 #id_langs div {
 	margin-top: 3px;
 }
+
+.bcnav {
+	position: relative;
+	float: left;
+	clear: both;
+	margin-top: 1em;
+	margin-bottom: 2em;
+	}
