--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -1,4 +1,3 @@
-
 /*
 YUI3 GRIDS
 Copyright (c) 2010, Yahoo! Inc. All rights reserved.
@@ -766,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     10);
+		                                       10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                     
-		                                    0);
+		                                      0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1329,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     25);
+		                                       25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1724,14 +1723,14 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                           
+	filter: progid :                             
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
 		                           
-		               DXImageTransform.Microsoft.AlphaImageLoader (   
+		                 DXImageTransform.Microsoft.AlphaImageLoader (     
 		              
 		 
 		   
@@ -1752,7 +1751,9 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                                                src =
+		                                                                  src
+		= 
+		
 		 
 		   
 		        
@@ -1770,8 +1771,8 @@ p#clear {
 		                      
 		                      
 		                      
-		                   '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =             
+		                     '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =               
 		 
 		   
 		                
@@ -1791,7 +1792,7 @@ p#clear {
 		   
 		                                                               
 		                                                               
-		      'scale' );
+		        'scale' );
 }
 
 .yui-picker-mask {
@@ -1966,11 +1967,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     25);
+		                                       25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2075,11 +2076,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     12);
+		                                       12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2195,11 +2196,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     12);
+		                                       12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2261,11 +2262,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                     
-		                                    0);
+		                                      0);
 }
 
 .yui-dt-resizerproxy {
@@ -2274,11 +2275,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                     
-		                                    0);
+		                                      0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2374,11 +2375,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     25);
+		                                       25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2765,21 +2766,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     50);
+		                                       50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     50);
+		                                       50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2877,11 +2878,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     50);
+		                                       50);
 }
 
 .yui-editor-container iframe {
@@ -3982,11 +3983,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     50);
+		                                       50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4753,11 +4754,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     12);
+		                                       12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5268,20 +5269,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                     
-		                                    0);
+		                                      0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     50);
+		                                       50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5369,11 +5370,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                             
+	filter: alpha(opacity =                                               
 		                                                         
 		                                                         
 		                                                                   
-		                                       100);
+		                                         100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5629,21 +5630,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     50);
+		                                       50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     50);
+		                                       50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5741,11 +5742,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                              
+	filter: alpha(opacity =                                                
 		                                                         
 		                                                         
 		                                                                    
-		                                     50);
+		                                       50);
 }
 
 .yui-editor-container iframe {
@@ -7699,7 +7700,7 @@ table.qform td {
 #doc3,div.doc3 {
 	margin: auto; /* center in viewport */
 	width: 960px;
-}  /*
+} /*
 
 #loginblock {
 	width: 100%;
@@ -7803,13 +7804,13 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                 
+	filter: progid :                   
 		                                                        
 		                                                        
 		                                   
 		                                   
 		                                   
-		 DXImageTransform.Microsoft.gradient (    
+		   DXImageTransform.Microsoft.gradient (      
 		
 		 
 		    
@@ -7827,7 +7828,7 @@ a#asignup {
 		                 
 		                                                         
 		                                                         
-		  startColorstr =     
+		    startColorstr =       
 		 
 		   
 		      
@@ -7839,7 +7840,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		                                 "#0000FF", endColorstr = 
+		                                   "#0000FF", endColorstr =   
 		               
 		                               
 		 
@@ -7850,7 +7851,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                                           "#19558D" );
+		                                             "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8008,7 +8009,6 @@ div#layout1 div#qview-body {
 .globe {
 	background-position: -179px -151px;
 }
-
 
 .sweep {
 	background-position: -29px -61px;
@@ -8464,12 +8464,13 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :    
+	filter: progid :      
 		                                                        
 		                                                        
 		                                   
 		                                   
-		                        DXImageTransform.Microsoft.gradient (        
+		                          DXImageTransform.Microsoft.gradient ( 
+		        
 		                  
 		
 		 
@@ -8484,7 +8485,8 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                                               startColorstr =     
+		                                                 startColorstr =
+		      
 		              
 		                             
 		 
@@ -8493,7 +8495,9 @@ li.tsearch {
 		              
 		                            
 		                                                             
-		                                             "#A7BBCC", endColorstr = 
+		                                               "#A7BBCC", endColorstr
+		= 
+		 
 		   
 		       
 		               
@@ -8504,7 +8508,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		                                "#879BAD" );
+		                                  "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -10457,4 +10461,18 @@ span.inreply {
 	clear: both;
 	margin-top: 1em;
 	margin-bottom: 2em;
-	}
+}
+
+.sub_label {
+	clear: both;
+	float: left;
+	color: #333;
+}
+
+.subcategories {
+	border-color: black;
+	border-width: 1px;
+	border-style: solid;
+	width: 90%;
+	padding: 1em;
+}
