Added try/catch to __destruct, better handling on Mongo connection. New rewrite rules for categories support

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -765,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        10);
+		                                          10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                     
-		                                       0);
+		                                         0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1328,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        25);
+		                                          25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,14 +1723,15 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                              
+	filter: progid :                                
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
 		                           
-		                  DXImageTransform.Microsoft.AlphaImageLoader (      
+		                    DXImageTransform.Microsoft.AlphaImageLoader ( 
+		      
 		              
 		 
 		   
@@ -1751,8 +1752,8 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                                                   src
-		=  
+		                                                                   
+		 src =    
 		
 		 
 		   
@@ -1771,8 +1772,9 @@ p#clear {
 		                      
 		                      
 		                      
-		                      '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =                
+		                      
+		 '../../build/colorpicker/assets/picker_mask.png', sizingMethod = 
+		                
 		 
 		   
 		                
@@ -1792,7 +1794,7 @@ p#clear {
 		   
 		                                                               
 		                                                               
-		         'scale' );
+		           'scale' );
 }
 
 .yui-picker-mask {
@@ -1967,11 +1969,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        25);
+		                                          25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2076,11 +2078,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        12);
+		                                          12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2196,11 +2198,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        12);
+		                                          12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2262,11 +2264,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                     
-		                                       0);
+		                                         0);
 }
 
 .yui-dt-resizerproxy {
@@ -2275,11 +2277,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                     
-		                                       0);
+		                                         0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2375,11 +2377,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        25);
+		                                          25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2766,21 +2768,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        50);
+		                                          50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        50);
+		                                          50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2878,11 +2880,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        50);
+		                                          50);
 }
 
 .yui-editor-container iframe {
@@ -3983,11 +3985,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        50);
+		                                          50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4754,11 +4756,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        12);
+		                                          12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5269,20 +5271,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                     
-		                                       0);
+		                                         0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        50);
+		                                          50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5370,11 +5372,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                                
+	filter: alpha(opacity =                                                  
 		                                                         
 		                                                         
 		                                                                   
-		                                          100);
+		                                            100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5630,21 +5632,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        50);
+		                                          50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        50);
+		                                          50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5742,11 +5744,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                   
 		                                                         
 		                                                         
 		                                                                    
-		                                        50);
+		                                          50);
 }
 
 .yui-editor-container iframe {
@@ -7804,13 +7806,13 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                    
+	filter: progid :                      
 		                                                        
 		                                                        
 		                                   
 		                                   
 		                                   
-		    DXImageTransform.Microsoft.gradient (       
+		      DXImageTransform.Microsoft.gradient (         
 		
 		 
 		    
@@ -7828,7 +7830,7 @@ a#asignup {
 		                 
 		                                                         
 		                                                         
-		     startColorstr =        
+		       startColorstr =          
 		 
 		   
 		      
@@ -7840,7 +7842,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		                                    "#0000FF", endColorstr =    
+		                                      "#0000FF", endColorstr =      
 		               
 		                               
 		 
@@ -7851,7 +7853,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                                              "#19558D" );
+		                                                "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8464,12 +8466,12 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :       
+	filter: progid :         
 		                                                        
 		                                                        
 		                                   
 		                                   
-		                           DXImageTransform.Microsoft.gradient (  
+		                             DXImageTransform.Microsoft.gradient (    
 		        
 		                  
 		
@@ -8485,7 +8487,7 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                                                  startColorstr = 
+		                                                    startColorstr =   
 		      
 		              
 		                             
@@ -8495,8 +8497,8 @@ li.tsearch {
 		              
 		                            
 		                                                             
-		                                                "#A7BBCC", endColorstr
-		=  
+		                                                  "#A7BBCC",
+		endColorstr =    
 		 
 		   
 		       
@@ -8508,7 +8510,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		                                   "#879BAD" );
+		                                     "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -10488,4 +10490,8 @@ div.category_info div.cats_w,div.subcategory div.cats_w {
 div.categ_title a {
 	font-weight: bold;
 	size: 120% !important;
-	}
+}
+
+div.onesub {
+	margin-right: 1em;
+}
