Many updates related to new placeholders in templates, now router rules, route rewrite and translation rewrites in output buffer

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -7737,10 +7737,10 @@ li.ttab, li.ttab_current {
     position: relative;
     float: left;
     display: block;
-    margin-right: 7px;
+    margin-right: 5px;
     color: #ffffff;
     cursor: pointer;
-    padding: 12px;
+    padding: 0.5em;
 }
 
 li.tsearch {
