Updated css and copied some images to images dir under the css dir. Now css will work when site installed in sub-directory. Updated more templates to use translation strings

--- a/www/css/flags.css
+++ b/www/css/flags.css
@@ -2,7 +2,7 @@
 img.flag {
     width: 18px;
     height: 12px;
-    background: url('/images/flags.png') no-repeat;
+    background: url('images/flags.png') no-repeat;
 }
 
 .flag.flag-af {
