Completed Moderation feature

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -7352,6 +7352,10 @@ div#layout1 div#qview-body {
     background-position: -29px -61px;
 }
 
+.shell {
+    background-position: -568px -240px;
+}
+
 .more {
     background-position: -568px -88px;
 }
